--- a/guice/pom.xml
+++ b/guice/pom.xml
@@ -11,6 +11,7 @@
 	
 	<properties>
 		<guice.version>3.1.2</guice.version>
+		<resteasy.version>3.0.5.Final</resteasy.version>
 	</properties>
 
 	<parent>
