--- a/guice/restclient/pom.xml
+++ b/guice/restclient/pom.xml
@@ -27,10 +27,15 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
+			<version>${resteasy.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-client</artifactId>
 			<version>${resteasy.version}</version>
 		</dependency>
 		<dependency>
@@ -60,11 +65,11 @@
 			<artifactId>xml-apis</artifactId>
 			<version>2.0.2</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -73,19 +78,5 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-		<!--
-				<dependency>
-					<groupId>com.sun.jersey</groupId>
-					<artifactId>jersey-server</artifactId>
-					<version>1.14</version>
-				</dependency>
-
-				<dependency>
-					<groupId>com.sun.jersey</groupId>
-					<artifactId>jersey-client</artifactId>
-					<version>1.14</version>
-				</dependency>
-		-->
 	</dependencies>
 </project>
