--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
 		<module>stdlib</module>
 		<module>guice</module>
 		<module>util/carbon-client</module>
+		<module>samples</module>
 	</modules>
 	
 	<dependencyManagement>
