--- a/samples/sample-rest-service/pom.xml
+++ b/samples/sample-rest-service/pom.xml
@@ -12,7 +12,7 @@
 
 	<parent>
 		<groupId>com.peterphi.std.guice</groupId>
-		<artifactId>stdlib-guice-parent</artifactId>
+		<artifactId>stdlib-samples-parent</artifactId>
 		<version>5.0.2-SNAPSHOT</version>
 	</parent>
 
