--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
 		<javalang.version>1.8</javalang.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<junit.version>4.11</junit.version>
-		<httpclient.version>4.3.6</httpclient.version>
+		<httpclient.version>4.4</httpclient.version>
+		<moxy.version>2.5.2</moxy.version>
 	</properties>
 
 	<scm>
@@ -73,7 +74,7 @@
 			<dependency>
 				<groupId>joda-time</groupId>
 				<artifactId>joda-time</artifactId>
-				<version>2.3</version>
+				<version>2.7</version>
 			</dependency>
 			
 			<dependency>
